[project]
name = "xcover"
version = "0.1.5"
authors = [
  { name="John F. Rudge", email="jfr23@cam.ac.uk" },
]
description = "Exact cover with colors"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
  "numba",
]


[project.urls]
Homepage = "https://github.com/johnrudge/xcover"
Issues = "https://github.com/johnrudge/xcover/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["xcover"]
